# pyFolia

./: .flake8  .gitignore  README.md  geocode.py  hexagonal.py  myFolia.py  plantbiculture.py  plantingalgorithm.py  plantmonoculture.py  pyproject.toml  requirements.txt  reverse.py  usda.csv  usda.py  usda2plants.py
data/: 1.csv  10.csv  10a.csv  10b.csv  11.csv  11a.csv  11b.csv  12.csv  12a.csv  12b.csv  13.csv  13a.csv  13b.csv  14.csv  2.csv  2a.csv  2b.csv  3.csv  3a.csv  3b.csv  4.csv  4a.csv  4b.csv  5.csv  5a.csv  5b.csv  6.csv  6a.csv  6b.csv  7.csv  7a.csv  7b.csv  8.csv  8a.csv  8b.csv  9.csv  9a.csv  9b.csv
src/pyfolia/: __init__.py  catalogue.py  cli.py  hexgrid.py  models.py  planner.py  serialise.py  spacing.py  svg.py  zones.py
src/pyfolia/data/: __init__.py  plants.json
tests/: test_catalogue.py  test_cli.py  test_hexgrid.py  test_planner.py  test_serialise.py  test_svg.py
